Fix spacing image in header.

--- a/source/stylesheets/components/header.styl
+++ b/source/stylesheets/components/header.styl
@@ -20,6 +20,10 @@ header
     display: block;
     margin-bottom: $grid-gutter-width;
     text-align: left;
+
+    img {
+        display: block;
+    }
 }
 
 .header_links {
